--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/demachilab/.conda/envs/caffe-tf/bin/python"
+    "python.pythonPath": "/home/demachilab/anaconda3/envs/tf/bin/python"
 }
